alignement texte header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <img src="" alt="Photo personnelle"></img>
         <div id="header">
-            <h1>Aurelien Debande</h1>
+            <h1>Debande Aurélien</h1>
             <p>Téléphone : 0494.40.77.83</p>
             <p>Email : aureliendebande@gmail.com</p>
             <p>Github : DebandeAurelienHeh</p>
