Header absolute et autres changements

--- a/index.html
+++ b/index.html
@@ -5,37 +5,41 @@
     <title>Projet</title>
     <link rel="stylesheet" href="style.css" media="all">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Curriculum Vitae">
+    <meta name="description" content="Etudiant en informatique option développement">
     <meta name="keywords" content="programmation, CV, python, java, HTML, CSS, jQuery, javaScript, PHP, MySQL, escalade">
     <meta name="author" content="Debande Aurélien">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
-        <img src="" alt="Photo personnelle"></img>
-        <div id="header">
-            <h1>Debande Aurélien</h1>
-            <p>Téléphone : 0494.40.77.83</p>
-            <p>Email : aureliendebande@gmail.com</p>
-            <p>Github : DebandeAurelienHeh</p>
-            <p>Linkedin : www.linkedin.com/in/aurelien-debande-a09140350</p>
-            <p>Adresse : Rue de Sartiau 89, 6533 Biercee </p>
+        <img src="images/PhotodeProfil.jpg" height="300" alt="Photo personnelle"></img>
+        <div>
+            <div id="header">
+                <h1>Aurélien Debande</h1>
+                <h4>Étudiant en informatique option développement</h4>
+                <p><i class="fas fa-phone"></i> Téléphone : 0494.40.77.83</p>
+                <p><i class="fas fa-envelope"></i> Email : aureliendebande@gmail.com</p>
+                <p><i class="fab fa-github"></i> Github : DebandeAurelienHeh</p>
+                <p><i class="fab fa-linkedin"></i> Linkedin : www.linkedin.com/in/aurelien-debande-a09140350</p>
+                <p><i class="fas fa-home"></i> Adresse : Rue de Sartiau 89, 6533 Biercee </p>
+            </div>
         </div>
     </header>
     <main>
         <div class="container">
             <div id="left_column">
                 <h2>Profil</h2>
-                <p>Etudiant en informatique option développement</p>
+                <p>Passionné par la programmation et les nouvelles technologies</p>
                 <p>Possession du permis B et de la voiture </p>
                 <p>Réalise de l’escalade en blocs et de la callisthénie </p>
-
+                <br>
                 <h2>Langues</h2>
                 <ul id="liste_langues">
                     <li>Français courant</li>
                     <li>Bon niveau en anglais</li>
                     <li>Néerlandais basique</li>
                 </ul>
-
+                <br>
                 <h2>Compétences</h2>
                 <p>Maitrise du :</p>
                 <ul id="liste_competences">
@@ -48,7 +52,7 @@
                 <p>En apprentissage :</p>
                 <ul id="liste_competences">
                     <li>Java</li>
-                    <li>javaScript</li>
+                    <li>JavaScript</li>
                     <li>jQuery</li>
                     <li>Solidity</li>
                 </ul>
@@ -59,7 +63,7 @@
                 <p>Orientation réseaux & télécommunications option développement</p>
                 <p>2019 - 2023 → Bachelier en sciences Biomédicales à l’UMONS</p>
                 <p>2019 → Obtention du CESS à Notre Dame de Bonne-Espérance</p>
-
+                <br>
                 <h2>Expériences professionnelles</h2>
                 <ul id="liste_experiences">
                     <li>Hackathon à Oxford (EthOxford - 2025)</li>
@@ -69,6 +73,7 @@
                     <li>Travail étudiant à la menuiserie Quertinmont</li>
                 </ul>
 
+                <br>
                 <h2>Intérêts particuliers</h2>
                 <ul id="liste_interets">
                     <li>Apprentissage de nouvelles technologies et langages de programmation</li>
@@ -77,6 +82,7 @@
                     <li>Développement de mini-jeux et le mod de jeux existants</li>
                 </ul>
 
+                <br>
                 <h2>Objectif à court terme</h2>
                 <p>Réalisation du master en sciences informatiques en horaire décalé à la fin de mon bachelier 
                     tout en travaillant en tant que développeur durant la journée</p>
