--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     <li>Java</li>
                     <li>JavaScript</li>
                     <li>jQuery</li>
+                    <li>React</li>
                     <li>Solidity</li>
                 </ul>
             </div>
