feat: basic media query done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img src="images/PhotodeProfil.jpg" height="300" alt="Photo personnelle"></img>
+        <img src="images/PhotodeProfil.jpg" height="300" alt="Photo personnelle">
         <div>
             <div id="header">
                 <h1>Aurélien Debande</h1>
@@ -42,7 +42,7 @@
                 <br>
                 <h2>Compétences</h2>
                 <p>Maitrise du :</p>
-                <ul id="liste_competences">
+                <ul class="liste_competences">
                     <li>Python</li>
                     <li>HTML</li>
                     <li>CSS</li>
@@ -50,7 +50,7 @@
                     <li>MySQL</li>
                 </ul>
                 <p>En apprentissage :</p>
-                <ul id="liste_competences">
+                <ul class="liste_competences">
                     <li>Java</li>
                     <li>JavaScript</li>
                     <li>jQuery</li>
