--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Projet</title>
     <link rel="stylesheet" href="style.css" media="all">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Etudiant en informatique option développement">
-    <meta name="keywords" content="programmation, CV, python, java, HTML, CSS, jQuery, javaScript, PHP, MySQL, escalade">
+    <meta name="description" content="CV d'un étudiant en informatique option développement">
+    <meta name="keywords" content="programmation, CV, python, java, HTML, CSS, jQuery, javaScript, PHP, MySQL, escalade, callisthénie">
     <meta name="author" content="Debande Aurélien">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -32,13 +32,13 @@
         <div>
             <div id="header">
                 <h1>Aurélien Debande</h1>
-                <h4>Étudiant en informatique option développement</h4>
+                <h4 id="typeWriter"></h4>
                 <p><i class="fas fa-phone"></i> Téléphone : 0494.40.77.83</p>
                 <p><i class="fas fa-envelope"></i> Email : aureliendebande@gmail.com</p>
                 <p><i class="fab fa-github"></i> Github : DebandeAurelienHeh</p>
                 <p><i class="fab fa-linkedin"></i> Linkedin : www.linkedin.com/in/aurelien-debande-a09140350</p>
                 <p><i class="fas fa-home"></i> Adresse : Rue de Sartiau 89, 6533 Biercee </p>
-                <input type="text" id="search" placeholder="Rechercher...">
+                <input type="text" id="search" placeholder="Rechercher dans le CV">
             </div>
         </div>
     </header>
@@ -47,8 +47,8 @@
             <div id="left_column">
                 <h2>Profil</h2>
                 <p>Passionné par la programmation et les nouvelles technologies</p>
-                <p>Possession du permis B et de la voiture </p>
-                <p>Réalise de l’escalade en blocs et de la callisthénie </p>
+                <p>Titulaire du permis B et véhiculé </p>
+                <p>Pratique l’escalade en bloc et la callisthénie </p>
                 <br>
                 <h2>Langues</h2>
                 <ul id="liste_langues">
@@ -78,7 +78,7 @@
             <div id="right_column">
                 <h2>Parcours</h2>
                 <p>2023 - En cours → 2ème année du Bachelier en Informatique à la HEH</p>
-                <p>Orientation réseaux & télécommunications option développement</p>
+                <p>Orientation réseaux & télécommunications - Option Développement</p>
                 <p>2019 - 2023 → Bachelier en sciences Biomédicales à l’UMONS</p>
                 <p>2019 → Obtention du CESS à Notre Dame de Bonne-Espérance</p>
                 <br>
@@ -92,44 +92,72 @@
                 </ul>
 
                 <br>
-                <h2>Intérêts particuliers</h2>
+                <h2>Centres d'intérêt</h2>
                 <ul id="liste_interets">
                     <li>Apprentissage de nouvelles technologies et langages de programmation</li>
                     <li>Le fonctionnement de l’IA et ses implémentations</li>
                     <li>Résolution de problèmes (programmation, échecs, casse-tête, …)</li>
-                    <li>Développement de mini-jeux et le mod de jeux existants</li>
+                    <li>Développement de mini-jeux et modification de jeux existants</li>
                 </ul>
 
                 <br>
                 <h2>Objectif à court terme</h2>
-                <p>Réalisation du master en sciences informatiques en horaire décalé à la fin de mon bachelier 
-                    tout en travaillant en tant que développeur durant la journée</p>
+                <p>Poursuivre un master en sciences informatiques en horaire décalé à la fin de mon bachelier,
+                    tout en travaillant comme développeur durant la journée.</p>
             </div>
         </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/mark.min.js"></script>
-
     <script>
-    const searchInput = document.getElementById('search');
-    const searchContexts = [
-        document.querySelector('#header'),
-        document.querySelector('#left_column'),
-        document.querySelector('#right_column')
-    ];
+        // Search bar
+        const searchInput = document.getElementById('search');
+        const searchContexts = [
+            document.querySelector('#header'),
+            document.querySelector('#left_column'),
+            document.querySelector('#right_column')
+        ];
 
-    const markers = searchContexts.map(context => new Mark(context));
+        const markers = searchContexts.map(context => new Mark(context));
 
-    const handleSearch = (keyword) => {
-        markers.forEach(marker => {
-            marker.unmark({
-            done: () => keyword && marker.mark(keyword)
+        const securityInput = (input) => {
+            const regex = /[<>{}[\]()/\\"']/g;
+
+            return input.replace(regex, '').trim();
+        };
+
+        const handleSearch = (rawInput) => {
+            const keyword = securityInput(rawInput);
+
+            markers.forEach(marker => {
+                marker.unmark({
+                    done: () => marker.mark(keyword)
+                });
             });
-        });
-    };
+        };
 
-    searchInput.addEventListener('input', (event) => {
-        handleSearch(event.target.value.trim());
-    });
+        searchInput.addEventListener('input', (event) => {
+            handleSearch(event.target.value);
+        });
+
+
+        // Apparition du statut au chargement de la page
+        const text = "Etudiant en informatique option développement";
+        const typeWriter = document.getElementById("typeWriter");
+        let index = 0;
+
+        function typeWriterEffect(){
+            if (index < text.length){
+                typeWriter.innerHTML += text.charAt(index);
+                index += 1;
+                time = 100;
+                setTimeout(typeWriterEffect, time);
+            }
+        }
+
+        window.addEventListener("load", function() {
+            typeWriterEffect();
+        });
+
     </script>
     
 </body>
